--- a/src/components/Typography.stories.mdx
+++ b/src/components/Typography.stories.mdx
@@ -1,4 +1,4 @@
-import { Meta, Typeset } from '@storybook/addon-docs/blocks';
+import { Meta, Typeset } from "@storybook/addon-docs/blocks";
 
 <Meta title="Coop UI/Typography" />
 
